# call_jax_from_cpp

./: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE
cpp/: BUILD  main_aot.cpp  main_hlo.cpp
python/: simple_jax_example.py
stable_hlo/: example1.txt
